fluxcd/infrastructure/configs/overlays/production/cilium-policies/optcp-restricted/cnp-plex-lb.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-plex-ms-x-lan
spec:
  description: >-
    LAN-only ingress to plex-ms-x (172.22.30.124) on port 32400.
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      app: plex-ms-x
  ingress:
    - fromCIDRSet:
        - cidr: "10.0.0.0/8"
        - cidr: "172.16.0.0/12"
        - cidr: "192.168.0.0/16"
          except:
            - "192.168.144.0/20"
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
